--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -1,27 +1,11 @@
 {% extends "./layout.njk" %}
 
 {% block content %}
-  <div class="c-hero">
+  <article>
     <div class="container">
-      <h1 class="c-hero__heading">{{ pageTitle }}</h1>
-      <p class="c-hero__version">v{{ metadata.version }}</p>
-      <div class="c-hero__desc">
-        <p>{{ metadata.description }}</p>
-        <div class="c-hero__link-wrapper">
-          <a class="c-hero__link c-hero__link--about" href="/about">About this project</a>
-        </div>
-        <div class="c-hero__link-wrapper">
-          <a class="c-hero__link c-hero__link--github" href="{{ metadata.githubUrl }}">
-            Fork this on Github
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30">
-              <use href="/sprite.svg#github"/>
-            </svg>
-          </a>
-        </div>
-      </div>
+      <h1>{{ pageTitle }}</h1>
+
+      {{ content | safe }}
     </div>
-  </div>
-
-  {{ content | safe }}
-
+  </article>
 {% endblock %}
