--- a/src/css/02-base/_layout.scss
+++ b/src/css/02-base/_layout.scss
@@ -8,6 +8,11 @@ body {
   font-display: swap;
 }
 
+main {
+  flex-grow: 1;
+  padding-block: var(--step-2);
+}
+
 .container {
   max-width: 60rem;
   margin: 0 auto;
