--- a/src/css/04-components/_footer.scss
+++ b/src/css/04-components/_footer.scss
@@ -1,9 +1,3 @@
 .c-footer {
-  padding: 1rem;
-  color: var(--lightGrey);
-  background-color: var(--bgDark);
-
-  @media (min-width: $md) {
-    padding: 1rem 2rem;
-  }
+  padding: var(--step-0);
 }
