--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -2,10 +2,18 @@
 
 {% block content %}
   <article>
-    <div class="container">
-      <h1>{{ pageTitle }}</h1>
+    <div class="c-hero">
+      <div class="container container--xl">
+        <div class="c-hero__content">
+          <h1 class="heading-xl">{{ pageTitle }}</h1>
+        </div>
+      </div>
+    </div>
 
-      {{ content | safe }}
+    <div class="container o-richtext">
+      <div class="o-richtext">
+        {{ content | safe }}
+      </div>
     </div>
   </article>
 {% endblock %}
