--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -13,9 +13,12 @@
     <title>{{ metadata.title }}</title>
     <meta name="Description" content="{{ metadata.description }}">
     <link rel="stylesheet" href="/css/styles{{ CssVersion }}.css">
+
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+
     <meta property="og:title" content="{{ metadata.title }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="{{ metadata.description }}"/>
