--- a/src/_includes/home.njk
+++ b/src/_includes/home.njk
@@ -2,15 +2,17 @@
 
 {% block content %}
   <article>
+    {% if title %}
     <div class="c-hero">
       <div class="container container--xl">
         <div class="c-hero__content">
-          <h1 class="heading-xl">{{ pageTitle }}</h1>
+          <h1 class="heading-xl">{{ title }}</h1>
         </div>
       </div>
     </div>
+    {% endif %}
 
-    <div class="container o-richtext">
+    <div class="container">
       <div class="o-richtext">
         {{ content | safe }}
       </div>
