--- a/src/css/04-components/_hero.scss
+++ b/src/css/04-components/_hero.scss
@@ -10,7 +10,7 @@
     content: '';
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: calc(var(--space-s-l) * -1);
     width: max(5rem, 25vi);
     border-top: 0.3rem solid;
   }
