--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -29,6 +29,8 @@
   </head>
 
   <body>
+    {% include "./partials/header.njk" %}
+
     <main>
       {% block content %}{% endblock %}
     </main>
