--- a/src/css/02-base/_typography.scss
+++ b/src/css/02-base/_typography.scss
@@ -48,7 +48,6 @@ a {
 
   &:hover,
   &:focus {
-    color: var(--accent);
     text-underline-offset: 0.3em;
   }
 }
@@ -56,4 +55,13 @@ a {
 .heading-xl {
   font-size: max(2.986rem, 1rem + 10vi);
   line-height: 1.125;
+}
+
+.text-lg {
+  font-size: var(--step-2);
+}
+
+.intro {
+  font-size: var(--step-1);
+  font-weight: 520;
 }
