--- a/src/css/02-base/_layout.scss
+++ b/src/css/02-base/_layout.scss
@@ -1,4 +1,4 @@
-@media (prefers-reduced-animation: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
   html {
     scroll-behavior: smooth;
   }
