--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,5 @@
 <footer class="c-footer">
-  <small>&copy;
-    {{ metadata.author.name }}
+  <small>Written by {{ metadata.author.name }},
     {{ page.date.getFullYear() }}
   </small>
 </footer>
