--- a/src/css/02-base/_typography.scss
+++ b/src/css/02-base/_typography.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: 120%;
+  font-size: 110%;
 }
 
 body {
@@ -36,6 +36,10 @@ h3 {
 
 p {
   line-height: 1.55;
+}
+
+strong {
+  font-weight: 720;
 }
 
 a {
