--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -42,6 +42,6 @@
     {% else %}
       {% set JsVersion = version.js %}
     {% endif %}
-    <script type="module" src="/js/index{{ JsVersion }}.js"></script>
+    <!--<script type="module" src="/js/index{{ JsVersion }}.js"></script>-->
   </body>
 </html>
