Update copy and styles

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
 <footer class="c-footer">
-  <small>Written by {{ metadata.author.name }},
+  <small>Written by <a href="https://michellebarker.co.uk">{{ metadata.author.name }}</a>,
     {{ page.date.getFullYear() }}
   </small>
 </footer>
