--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,13 +2,13 @@
   <nav>
     <ul class="c-header__list">
       <li>
-        <a href="#01-manifesto">Manifesto</a>
+        <a href="#03-manifesto">Manifesto</a>
       </li>
       <li>
-        <a href="#02-about">About</a>
+        <a href="#04-references">References</a>
       </li>
       <li>
-        <a href="#03-resources">Resources</a>
+        <a href="#05-further-reading">Further reading</a>
       </li>
     </ul>
   </nav>
