--- a/src/css/01-config/_variables.scss
+++ b/src/css/01-config/_variables.scss
@@ -6,7 +6,7 @@ $lg: 70em;
 
 :root {
   /* Colors */
-  --bg: #fc7ea4;
+  --bg: #f2fff8;
   --textColor: #181531;
   --accent: deeppink;
   --white: #f7f7f7;
