--- a/src/css/04-components/_header.scss
+++ b/src/css/04-components/_header.scss
@@ -5,16 +5,20 @@
   background-color: var(--bg);
   z-index: 1;
   font-size: var(--step--1);
+  border-bottom: 0.3rem solid;
 }
 
 .c-header__list {
   display: flex;
   flex-wrap: wrap;
-  gap: 0.5rem;
   justify-content: end;
 
   a {
     display: block;
     padding: 0.75rem 1rem;
+  }
+
+  @media (min-width: $md) {
+    gap: 0.5rem;
   }
 }
