--- a/src/css/02-base/_typography.scss
+++ b/src/css/02-base/_typography.scss
@@ -1,7 +1,3 @@
-html {
-  font-size: 110%;
-}
-
 body {
   font-family: var(--fontBody);
   font-size: var(--step-0);
@@ -42,6 +38,10 @@ strong {
   font-weight: 720;
 }
 
+small {
+  font-size: 0.9rem;
+}
+
 a {
   color: inherit;
   transition:
@@ -58,7 +58,7 @@ a {
 
 .heading-xl {
   font-size: max(2.986rem, 1rem + 10vi);
-  line-height: 1.125;
+  line-height: 1.1;
 }
 
 .text-lg {
