--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -19,6 +19,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#181531">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
+
     <meta property="og:title" content="{{ metadata.title }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:description" content="{{ metadata.description }}"/>
@@ -35,7 +44,14 @@
       <use href="/sprite.svg#decoration-01" />
     </svg>
 
-    <main>
+    <a href="#main" class="top-link">
+      Back to top
+      <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg">
+        <use href="/sprite.svg#icon-arrow-up" />
+      </svg>
+    </a>
+
+    <main id="main">
       {% block content %}{% endblock %}
     </main>
 
