--- a/src/css/04-components/_header.scss
+++ b/src/css/04-components/_header.scss
@@ -16,6 +16,12 @@
   a {
     display: block;
     padding: 0.75rem 1rem;
+    text-decoration-color: transparent;
+
+    &:hover,
+    &:focus {
+      text-decoration-color: inherit;
+    }
   }
 
   @media (min-width: $md) {
