--- a/src/css/03-objects/_richtext.scss
+++ b/src/css/03-objects/_richtext.scss
@@ -16,7 +16,11 @@
 
   ul {
     list-style-type: disc;
-    margin-left: 2rem;
+  }
+
+  ol,
+  ul {
+    padding-left: var(--space-s-l);
   }
 
   li + li {
