Adjust font size

--- a/src/css/01-config/_variables.scss
+++ b/src/css/01-config/_variables.scss
@@ -22,6 +22,7 @@ $lg: 70em;
   --step-4: clamp(2.0736rem, 1.6934rem + 1.9012vi, 3.3569rem);
   --step-5: clamp(2.4883rem, 1.9823rem + 2.5301vi, 4.1962rem);
   --step-6: clamp(2.986rem, 2.3166rem + 3.347vi, 5.2452rem);
+  --step-7: clamp(3.5832rem, 2.7022rem + 4.4049vw, 6.5565rem);
 
   --space-3xs: clamp(0.25rem, 0.213rem + 0.1852vi, 0.375rem);
   --space-2xs: clamp(0.5rem, 0.4444rem + 0.2778vi, 0.6875rem);
